--- a/templates/components/base.html
+++ b/templates/components/base.html
@@ -215,5 +215,9 @@
     }
   </script>
   <script src="{% static 'assets/js/main.js' %}"></script>
+  
+  {%block script_js%}
+
+  {%endblock script_js%}
 </body>
 </html>
