--- a/templates/components/imgCapture.html
+++ b/templates/components/imgCapture.html
@@ -28,6 +28,48 @@
   button:hover {
     background-color: #448BDF;
   }
+
+  .modal {
+    display: none; 
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#modalImage {
+  width: 50%%;
+  height: 50%%;
+  margin-bottom: 20px;
+}
 </style>
 
 <section id="modules" class="services">
@@ -43,8 +85,41 @@
     <form id="captureForm" method="POST" action="#">
     {% csrf_token %}
     <input type="hidden" name="imageData" id="imageData">
-    <input type="submit" value="Enviar Captura" style="background-color: #4CAF50; color: white; padding: 12px 20px; border: none; border-radius: 4px; cursor: pointer; transition: 0.3s;">
+    <input type="button" value="Enviar Captura" id="sendCapture" style="background-color: #4CAF50; color: white; padding: 12px 20px; border: none; border-radius: 4px; cursor: pointer; transition: 0.3s;">
     </form>
 </div>
 </section>
+
+<div id="modalDisplay" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <div class="container center-container" data-aos="fade-up">
+      <img id="modalImage" src="" alt="Imagen" >
+      <div id="modalTitle" class="section-title">
+        <h2></h2>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+
+  function openModal(imageUrl, face_type) {
+      var modal = document.getElementById("modalDisplay");
+      var title = document.getElementById("modalTitle").querySelector("h2")
+
+      modal.style.display = "block";
+      
+      var modalImg = document.getElementById("modalImage");
+      modalImg.src = imageUrl;
+      title.innerHTML = "Tipo de rostro: " + face_type
+  }
+  
+
+  function closeModal() {
+      var modal = document.getElementById("modalDisplay");
+      modal.style.display = "none";
+  }
+</script> 
+
 {% endblock content %}
