--- a/templates/index/modules.html
+++ b/templates/index/modules.html
@@ -20,7 +20,7 @@
               </svg>
               <i class="bi bi-scissors"></i>
             </div>
-            <h4><a href={% url 'haircut:index' %}>Módulo de cortes</a></h4>
+            <h4><a href={% url 'haircut:index' %}>Módulo de peinados</a></h4>
             <p>Recomendación de cortes de cabello a partir facciones del rostro</p>
           </div>
         </div>
