--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1223,3 +1223,76 @@ section {
   font-size: 20px;
   cursor: pointer;
 }
+
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 20px;
+}
+#video, #canvas {
+  margin: 10px auto;
+  display: block;
+  border: 1px solid #ddd;
+}
+button {
+  background-color: #448BDF ; 
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: 5px; 
+}
+button:hover {
+  background-color: #448BDF;
+}
+
+.modal {
+  display: none; 
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.9);
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#modalImage {
+max-width: 100%; 
+height: auto; 
+margin-bottom: 20px;
+}
+
+.small-modal .modal-content {
+max-width: 300px;
+padding: 10px;
+}
