--- a/apps/haircut/templates/haircut_modules.html
+++ b/apps/haircut/templates/haircut_modules.html
@@ -20,7 +20,7 @@
               </svg>
               <i class="bi bi-clock-history"></i>
             </div>
-            <h4><a href=#>Historial de cortes</a></h4>
+            <h4><a href={% url 'haircut:haircut_list' %}>Historial de cortes</a></h4>
             <p>Registro y edición de los distintos cortes de cabello seleccionados en la recomendación de cortes</p>
           </div>
         </div>
