--- a/apps/optical/templates/optical_modules.html
+++ b/apps/optical/templates/optical_modules.html
@@ -20,7 +20,7 @@
               </svg>
               <i class="bi bi-clock-history"></i>
             </div>
-            <h4><a href=#>Historial óptico</a></h4>
+            <h4><a href={% url 'optical:optical_list' %}>Historial óptico</a></h4>
             <p>Registro y edición de los distintos lentes seleccionados en la recomendación optica</p>
           </div>
         </div>
