--- a/apps/haircut/templates/haircut_list.html
+++ b/apps/haircut/templates/haircut_list.html
@@ -43,7 +43,7 @@
           <tbody>
             {% for haircut in haircuts %}
             <tr>
-                <td><img src='{{haircut.haircut.Imagen.url}}'></td>
+                <td><img src='{{haircut.haircut.Imagen.url}}' style="width: 800px; height: 800px"></td>
                 <td>{{haircut.haircut.Corte}}</td>
                 <td>{{haircut.date}}</td>
             </tr>
