--- a/apps/optical/templates/optical_list.html
+++ b/apps/optical/templates/optical_list.html
@@ -43,7 +43,7 @@
           <tbody>
             {% for glass in glasses %}
             <tr>
-                <td><img src='{{glass.glass.Imagen.url}}'></td>
+                <td><img src='{{glass.glass.Imagen.url}}' style="width: 800px; height: 800px"></td>
                 <td>{{glass.glass.Lente}}</td>
                 <td>{{glass.date}}</td>
             </tr>
