--- a/templates/components/404.html
+++ b/templates/components/404.html
@@ -6,7 +6,7 @@
     <div class="container">
       <section class="section error-404 min-vh-100 d-flex flex-column align-items-center justify-content-center">
         <h1>404</h1>
-        <h2>El registro al cual estás tratando de accesar no existe</h2>
+        <h2>La página a al cual estás intentado acceder no existe</h2>
         <a class="btn" href={% url "core:home" %}>Volver al inicio</a>
       </section>
 
