--- a/templates/components/imgCapture.html
+++ b/templates/components/imgCapture.html
@@ -37,7 +37,10 @@
 <div id="successModal" class="modal small-modal">
   <div class="modal-content">
     <span class="close" onclick="closeSuccessModal()">&times;</span>
-    <p id="successMessage"></p>
+    <img id="successImage" src="" alt="Success Image" style="width:100px; height:100px; display: block;
+            margin-left: auto;
+            margin-right: auto;">
+    <p id="successMessage" style='text-align: center'></p>
   </div>
 </div>
 
