--- a/templates/components/base.html
+++ b/templates/components/base.html
@@ -34,11 +34,11 @@
             {% comment %}  {% endcomment %}
             <hr style="border: 2px solid #ccc; margin: 5px 0;">
   
-            <li style="text-align: left;">
+            {% comment %} <li style="text-align: left;">
               {% if user.is_authenticated %}
                 <a href={% url "core:profile" %} class="nav-link scrollto active"><i class="bx bx-user"></i> <span>Perfil</span></a>
               {% endif %}
-            </li>
+            </li> {% endcomment %}
         
             <li style="text-align: left;">
               {% if user.is_authenticated %}
