--- a/templates/components/base.html
+++ b/templates/components/base.html
@@ -33,12 +33,6 @@
             </li>
             {% comment %}  {% endcomment %}
             <hr style="border: 2px solid #ccc; margin: 5px 0;">
-  
-            <li style="text-align: left;">
-              {% if user.is_authenticated %}
-                <a href={% url "core:profile" %} class="nav-link scrollto active"><i class="bx bx-user"></i> <span>Perfil</span></a>
-              {% endif %}
-            </li>
         
             <li style="text-align: left;">
               {% if user.is_authenticated %}
@@ -48,7 +42,13 @@
         
             <li style="text-align: left;">
               {% if user.is_authenticated %}
-                <a href={% url "core:logout" %} class="nav-link scrollto"><i class="bi bi-box-arrow-in-left"></i> <span>Cerrar sesión</span></a>
+              <form id="logout-form" method="post" action="{% url 'core:logout' %}" style="display: none;">
+                {% csrf_token %}
+              </form>
+            
+              <a href="#" class="nav-link scrollto" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
+                  <i class="bi bi-box-arrow-in-left"></i> <span>Cerrar sesión</span>
+              </a>
               {% elif not user.is_authenticated %}
                 <a href={% url "core:register" %} class="nav-link scrollto"><i class="bi bi-r-circle-fill"></i> <span>Registrarse</span></a>
               {% endif %}
